Bug#24158 SET PASSWORD in binary log fails under ANSI_QUOTES Problem: ``SET PASSWORD FOR foo@localhost'' was written into binary log using double quites: ``SET PASSWORD FOR "foo"@"localhost"...''. If sql_mode was set to ANSI_QUOTES, parser on slave considered "foo" and "localhost" as identifiers instead of strigns constants, so it failed to parse, generated syntax error and slave then stopped. Fix: changing binary log entries to use single quotes: ``SET PASSWORD FOR 'foo'@'localhost'...'' not to depend on ANSI_QUOTES.

mysql-test/r/rpl_do_grant.result:
  Adding test case
mysql-test/t/rpl_do_grant.test:
  Adding test case
sql/sql_acl.cc:
  Using single quotes instead of double quotes,
  not to fails when sql_mode=ANSI_QUOTES.